# n42-26

./: .gitignore  CLAUDE.md  Cargo.toml  DEVLOG.md  README.md  audit.toml  config.example.toml  reth-n42.patch  开发日志-02-集成测试.md  开发日志-03-审计加固.md  开发日志-05-通信架构研究.md  开发日志-07-通信架构改进.md  开发日志-08-通信智能优化.md  开发日志-09-流格式重构.md  开发日志-11-7节点测试网.md  开发日志-12-代码简化.md  开发日志-14-代码简化补充.md  开发日志-15-生产就绪补全.md  开发日志-16-全模块成熟度审计.md  开发日志-17-统一测试网.md  开发日志-19-TPS优化Phase1.md  开发日志-20-TPS优化Phase2.md  开发日志-23-并行EVM研究与实现.md  开发日志-24-Pipeline优化与诊断.md  开发日志-26-高负载链停滞修复与TPS基线.md  开发日志-27-EVM跳过基准测试与瓶颈定位.md  开发日志-28-性能优化方案设计.md  开发日志-29-高负载链停滞根治与Direct-Push生效.md  开发日志-30-TPS瓶颈深度分析与优化路线图.md  开发日志-32-CompactBlock与DelayedSR实验.md  开发日志-33-压测工具v8与Gas-Limit突破.md  开发日志-35-Pipeline-Profiling与瓶颈定位.md  开发日志-36-压测工具v9与Block-Size管理.md  开发日志-47-Channel-Split与独立Runtime.md  开发日志-48-28K-Cap-14K-TPS时序分析.md  开发日志-49-LAN极限TPS-Cap-Sweep.md  开发日志-51-JMT-Blake3集成.md  开发日志.md
crates/n42-bmt-core/: Cargo.toml
crates/n42-bmt-core/src/: lib.rs
crates/n42-chainspec/: Cargo.toml
crates/n42-chainspec/src/: lib.rs
crates/n42-consensus/: Cargo.toml
crates/n42-consensus-service/: Cargo.toml
crates/n42-consensus-service/examples/: replay_execution_plan.rs
crates/n42-consensus-service/src/: blob_port.rs  bootstrap.rs  consensus_state.rs  el.rs  exec_cache.rs  h2_finality.rs  ingest.rs  lib.rs  net_port.rs  observer.rs  persistence.rs  replay_import.rs  sinks.rs  validator_peers.rs
crates/n42-consensus-service/src/orchestrator/: bad_block_cache.rs  consensus_loop.rs  execution_bridge.rs  mod.rs  state_mgmt.rs
crates/n42-consensus-service/testdata/: h2_v4_finality_v1.json
crates/n42-consensus/src/: adapter.rs  arena.rs  error.rs  extra_data.rs  lib.rs  receipt.rs  rotor.rs  vote_log.rs
crates/n42-consensus/src/protocol/: bounded_fifo.rs  decision.rs  mod.rs  pacemaker.rs  proposal.rs  quorum.rs  round.rs  state_machine.rs  timeout.rs  voting.rs
crates/n42-consensus/src/validator/: epoch.rs  mod.rs  selection.rs  set.rs
crates/n42-consensus/tests/: chaos_7node.rs  integration_test.rs  performance_bench.rs
crates/n42-el-rpc/: Cargo.toml
crates/n42-el-rpc/src/: lib.rs
crates/n42-execution/: Cargo.toml
crates/n42-execution/src/: evm_config.rs  evm_factory.rs  executor.rs  lib.rs  precompile_random.rs  read_log.rs  state_diff.rs  witness.rs
crates/n42-jmt/: Cargo.toml  build.rs
crates/n42-jmt/benches/: jmt_bench.rs
crates/n42-jmt/examples/: sbmt_state_bench.rs  twig_state_bench.rs
crates/n42-jmt/src/: bmt.rs  disk_store.rs  evidence_store.rs  hasher.rs  keys.rs  lib.rs  metrics.rs  persistent.rs  proof.rs  sharded.rs  sharded_bmt.rs  snapshot.rs  store.rs  tree.rs  twig.rs
crates/n42-mobile/: Cargo.toml
crates/n42-mobile-ffi/: Cargo.toml
crates/n42-mobile-ffi/include/: n42_mobile.h
crates/n42-mobile-ffi/src/: android.rs  context.rs  ios.rs  lib.rs  transport.rs
crates/n42-mobile-ffi/tests/: twig_rpc_e2e.rs
crates/n42-mobile/src/: attestation.rs  code_cache.rs  commitment.rs  lib.rs  packet.rs  quic_client.rs  receipt.rs  serde_helpers.rs  state_proof.rs  verification.rs  verifier.rs  wire.rs
crates/n42-mobile/tests/: sbmt_rpc_e2e.rs  twig_rpc_e2e.rs
crates/n42-network/: Cargo.toml
crates/n42-network/examples/: finalized_range_verify.rs
crates/n42-network/src/: block_direct.rs  codec.rs  compact_receipts.rs  consensus_direct.rs  dissemination.rs  error.rs  finalized_range.rs  gov5_block.rs  gov5_rpc.rs  h2_bridge.rs  h2_v4.rs  h2_wire.rs  lib.rs  reconnection.rs  service.rs  state_sync.rs  transport.rs  tx_forward.rs
crates/n42-network/src/gossipsub/: handlers.rs  mod.rs  topics.rs
crates/n42-network/src/mobile/: fec.rs  mod.rs  receipt_batch.rs  session.rs  sharded_hub.rs  star_hub.rs
crates/n42-network/testdata/: cross_client_h2_v1.json  h2_v4_domains_v1.json  h2_v4_envelope_v1.json
crates/n42-node/: Cargo.toml
crates/n42-node/src/: attestation_store.rs  batch_transfer.rs  blob_port.rs  components.rs  consensus_state.rs  engine_validator.rs  epoch_schedule.rs  exec_cache.rs  ingest.rs  inject.rs  lib.rs  mobile_bridge.rs  mobile_evidence.rs  mobile_packet.rs  mobile_reward.rs  net_port.rs  node.rs  observer.rs  orchestrator.rs  packet_builder.rs  payload.rs  persistence.rs  pool.rs  qmdb_state.rs  qmdb_state_root.rs  rpc.rs  staking.rs  tx_bridge.rs  validator_peers.rs
crates/n42-node/src/el/: mod.rs  reth_engine.rs
crates/n42-node/src/orchestrator/: consensus_loop.rs  execution_bridge.rs  mod.rs  observer.rs  state_mgmt.rs  view_jump_throttle.rs
crates/n42-node/src/sinks/: mod.rs
crates/n42-node/tests/: comm_stress_bench.rs  stream_v2_pipeline.rs
crates/n42-parallel-evm/: Cargo.toml
crates/n42-parallel-evm/examples/: parallel_profile.rs
crates/n42-parallel-evm/src/: coinbase.rs  execution.rs  lib.rs  mv_memory.rs  output.rs  parallel_db.rs  scheduler.rs  types.rs  worker.rs
crates/n42-primitives/: Cargo.toml
crates/n42-primitives/examples/: bls_receipt_bench.rs
crates/n42-primitives/src/: lib.rs
crates/n42-primitives/src/bls/: aggregate.rs  keys.rs  mod.rs  verify.rs
crates/n42-primitives/src/consensus/: h2_v4.rs  messages.rs  mod.rs
crates/n42-twig-core/: Cargo.toml
crates/n42-twig-core/examples/: profile_real.rs  qmdb_portable_verify.rs
crates/n42-twig-core/src/: flat.rs  lib.rs  qmdb_compat.rs  simd.rs
crates/n42-twig-core/testdata/: cross_client_v1.json
crates/n42-zkproof/: Cargo.toml
crates/n42-zkproof-guest/: Cargo.toml
crates/n42-zkproof-guest/elf/: riscv32im-succinct-zkvm-elf
crates/n42-zkproof-guest/src/: main.rs
crates/n42-zkproof/src/: error.rs  lib.rs  prover.rs  scheduler.rs  sp1_prover.rs  store.rs
crates/n42-zkproof/tests/: integration.rs
tests/e2e/: Cargo.toml  README.md
tests/e2e/contracts/: TestUSDT.hex  TestUSDT.sol
tests/e2e/src/: erc20.rs  genesis.rs  main.rs  mobile_sim.rs  node_manager.rs  quic_test_client.rs  rpc_client.rs  test_helpers.rs  tx_engine.rs
tests/e2e/src/scenarios/: mod.rs  scenario10_chaos.rs  scenario11_quic_10k.rs  scenario12_blockscout_rpc.rs  scenario13_rewards.rs  scenario1_single_node.rs  (+9 more)
(+268 files in other folders)
