[workspace]
members = [
    "bin/n42-node",
    "bin/n42-consensus-standalone",
    "bin/n42-mobile-sim",
    "bin/n42-stress",
    "bin/n42-evm-bench",
    "crates/n42-primitives",
    "crates/n42-chainspec",
    "crates/n42-consensus",
    "crates/n42-consensus-service",
    "crates/n42-el-rpc",
    "crates/n42-execution",
    "crates/n42-mobile",
    "crates/n42-mobile-ffi",
    "crates/n42-network",
    "crates/n42-node",
    "crates/n42-parallel-evm",
    "crates/n42-jmt",
    "crates/n42-bmt-core",
    "crates/n42-twig-core",
    "crates/n42-zkproof",
    "tests/e2e",
]
exclude = [
    "crates/n42-zkproof-guest",  # Built with SP1 RISC-V toolchain, not host toolchain
]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2024"
rust-version = "1.97"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Internal crates
n42-primitives = { path = "crates/n42-primitives" }
n42-chainspec = { path = "crates/n42-chainspec" }
n42-consensus = { path = "crates/n42-consensus" }
n42-consensus-service = { path = "crates/n42-consensus-service" }
n42-el-rpc = { path = "crates/n42-el-rpc" }
n42-execution = { path = "crates/n42-execution" }
n42-mobile = { path = "crates/n42-mobile" }
n42-mobile-ffi = { path = "crates/n42-mobile-ffi" }
n42-network = { path = "crates/n42-network" }
n42-node = { path = "crates/n42-node" }
n42-parallel-evm = { path = "crates/n42-parallel-evm" }
n42-jmt = { path = "crates/n42-jmt" }
n42-bmt-core = { path = "crates/n42-bmt-core" }
n42-twig-core = { path = "crates/n42-twig-core" }
n42-zkproof = { path = "crates/n42-zkproof" }

# reth dependencies (n42blockchain/reth @ chore/reth-upstream-20260719, local path)
reth-chainspec = { path = "../reth/crates/chainspec" }
reth-consensus = { path = "../reth/crates/consensus/consensus" }
reth-db = { path = "../reth/crates/storage/db" }
reth-db-api = { path = "../reth/crates/storage/db-api" }
reth-ethereum-consensus = { path = "../reth/crates/ethereum/consensus" }
reth-ethereum-engine-primitives = { path = "../reth/crates/ethereum/engine-primitives" }
reth-ethereum-primitives = { path = "../reth/crates/ethereum/primitives" }
reth-evm = { path = "../reth/crates/evm/evm" }
reth-evm-ethereum = { path = "../reth/crates/ethereum/evm" }
reth-execution-types = { path = "../reth/crates/evm/execution-types", features = ["serde"] }
reth-node-api = { path = "../reth/crates/node/api" }
reth-node-builder = { path = "../reth/crates/node/builder" }
reth-node-ethereum = { path = "../reth/crates/ethereum/node" }
reth-node-types = { path = "../reth/crates/node/types" }
reth-payload-builder = { path = "../reth/crates/payload/builder" }
reth-primitives-traits = { version = "0.5.2", default-features = false }
reth-provider = { path = "../reth/crates/storage/provider" }
reth-revm = { path = "../reth/crates/revm" }
reth-tasks = { path = "../reth/crates/tasks" }
reth-transaction-pool = { path = "../reth/crates/transaction-pool" }
reth-tracing = { path = "../reth/crates/tracing" }
reth-storage-errors = { path = "../reth/crates/storage/errors" }
reth-trie-common = { path = "../reth/crates/trie/common", features = ["serde"] }
reth-trie-sparse = { path = "../reth/crates/trie/sparse" }
reth-network-api = { path = "../reth/crates/net/network-api" }
reth-ethereum-cli = { path = "../reth/crates/ethereum/cli" }
reth-ethereum-payload-builder = { path = "../reth/crates/ethereum/payload" }
reth-basic-payload-builder = { path = "../reth/crates/payload/basic" }
reth-payload-builder-primitives = { path = "../reth/crates/payload/builder-primitives" }
reth-payload-primitives = { path = "../reth/crates/payload/primitives" }
reth-engine-primitives = { path = "../reth/crates/engine/primitives" }
reth-chain-state = { path = "../reth/crates/chain-state" }
reth-libmdbx = { path = "../reth/crates/storage/libmdbx-rs" }
reth-storage-api = { path = "../reth/crates/storage/storage-api" }
reth-rpc-builder = { path = "../reth/crates/rpc/rpc-builder" }
reth-rpc-server-types = { path = "../reth/crates/rpc/rpc-server-types" }
reth-node-core = { path = "../reth/crates/node/core" }

# Alloy (aligned with n42blockchain/reth merged with upstream main)
alloy-consensus = { version = "2.2.0", default-features = false, features = ["serde"] }
alloy-eips = { version = "2.2.0", default-features = false, features = ["serde"] }
alloy-primitives = { version = "1.6.1", default-features = false, features = ["serde"] }
alloy-rlp = { version = "0.3.16", default-features = false }
alloy-genesis = { version = "2.2.0", default-features = false }
alloy-rpc-types-engine = { version = "2.2.0", default-features = false }

# Alloy signing & network
alloy-signer = { version = "2.2.0", default-features = false }
alloy-signer-local = { version = "2.2.0", default-features = false }
alloy-network = { version = "2.2.0", default-features = false }
alloy-rpc-types-eth = { version = "2.2.0", default-features = false }
alloy-sol-types = { version = "1.6.1", default-features = false }

# EVM — aligned with `../reth/Cargo.toml` (upstream main).
alloy-evm = { version = "0.37.1", default-features = false }
revm = { version = "41.0.0", default-features = false, features = ["std", "serde"] }

# Testing
reth-testing-utils = { path = "../reth/testing/testing-utils" }

# Crypto
blst = "0.3"
zeroize = { version = "1", features = ["derive"] }
bitvec = { version = "1.0", features = ["serde"] }
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }

# Caching
lru = "0.16"


# Serialization
borsh = { version = "1.8", features = ["derive"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
bincode = "1.3"

# Async
tokio = { version = "1.53.0", features = ["full"] }

# Error handling
eyre = "0.6"
thiserror = "2.0.19"

# Logging & metrics
tracing = "0.1"
metrics = "0.24"

# Networking
libp2p = { version = "0.56", features = ["gossipsub", "tokio", "quic", "tcp", "noise", "yamux", "identify", "macros", "request-response", "mdns", "kad"] }
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.14.7"

# RPC
jsonrpsee = { version = "0.26", features = ["server", "macros"] }

# Concurrency
arc-swap = "1.7"

# Encoding
hex = "0.4"

# Hashing
sha2 = "0.10"
snap = "1.1"
blake3 = "1"

# JMT
jmt = "0.12"
rayon = "1.10"
parking_lot = "0.12"

# Random
rand = "0.9"

# Keystore crypto
aes-gcm = "0.10"
scrypt = { version = "0.11", default-features = false, features = ["std"] }

# Zero-copy
bytes = "1"

# Compression
zstd = "0.13"

# Testing
tempfile = "3"

# Misc
auto_impl = "1.0"
derive_more = { version = "2", default-features = false, features = ["full"] }

# ── Build profiles ──────────────────────────────────────────────

[profile.dev]
# Line-tables-only keeps incremental builds fast while still giving usable backtraces.
debug = "line-tables-only"
split-debuginfo = "unpacked"

# Crypto and compression are painfully slow at opt-level 0.
[profile.dev.package]
blst.opt-level = 3
blake3.opt-level = 3
sha2.opt-level = 3
zstd-sys.opt-level = 3
revm.opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
strip = true

# Profiling: release-speed code with symbols for samply/pprof.
[profile.profiling]
inherits = "release"
debug = true
strip = false
