[package]
name = "n42-consensus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "N42 HotStuff-2 consensus implementation"

[dependencies]
n42-primitives.workspace = true
n42-chainspec.workspace = true

reth-chainspec.workspace = true
reth-consensus.workspace = true
reth-ethereum-consensus.workspace = true
reth-ethereum-primitives.workspace = true
reth-execution-types.workspace = true
reth-primitives-traits.workspace = true

alloy-primitives.workspace = true
bincode.workspace = true
bitvec.workspace = true

tokio.workspace = true
tracing.workspace = true
eyre.workspace = true
thiserror.workspace = true

[dev-dependencies]
n42-mobile = { workspace = true }
