[package]
name = "n42-el-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
n42-consensus-service = { workspace = true }

alloy-primitives = { workspace = true }
alloy-rpc-types-engine = { workspace = true, features = ["serde", "jwt"] }

# alloy's JwtSecret pulls jsonwebtoken but enables no crypto backend; select the
# pure-Rust HMAC provider (portable, no native aws-lc build) so HS256 encode works.
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
