[package]
name = "n42-execution"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "N42 EVM execution layer wrapping reth EthEvmConfig"

[dependencies]
n42-chainspec.workspace = true

reth-chainspec.workspace = true
reth-ethereum-primitives.workspace = true
reth-evm.workspace = true
reth-evm-ethereum.workspace = true
reth-execution-types.workspace = true
reth-primitives-traits.workspace = true
reth-revm = { workspace = true, features = ["witness"] }
reth-storage-errors.workspace = true
reth-trie-common.workspace = true

alloy-eips.workspace = true
alloy-evm.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types-engine.workspace = true
revm.workspace = true

serde.workspace = true
eyre.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
bincode.workspace = true
