[package]
name = "n42-jmt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "N42 Jellyfish Merkle Tree with Blake3 hashing, 16-shard parallelism, and Prometheus metrics"

[dependencies]
n42-execution.workspace = true
n42-bmt-core.workspace = true
n42-twig-core.workspace = true

jmt.workspace = true
blake3.workspace = true

alloy-primitives.workspace = true

serde.workspace = true
bincode.workspace = true
borsh.workspace = true
tracing.workspace = true
metrics.workspace = true
anyhow = "1"
eyre.workspace = true
thiserror.workspace = true

rayon.workspace = true
parking_lot.workspace = true
zstd.workspace = true
lru.workspace = true
reth-libmdbx.workspace = true

[dev-dependencies]
rand.workspace = true
criterion = "0.5"
tempfile.workspace = true
memory-stats = "1"
serde_json = "1"

[[bench]]
name = "jmt_bench"
harness = false

[[example]]
name = "sbmt_state_bench"
