[package]
name = "n42-mobile"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# Primitives
alloy-primitives.workspace = true

# Crypto (BLS12-381 signatures)
n42-primitives = { path = "../n42-primitives" }

# Caching
lru.workspace = true

# Serialization
serde.workspace = true
bincode.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true
