[package]
name = "n42-network"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# Internal
n42-primitives.workspace = true
n42-mobile.workspace = true

# Networking
libp2p.workspace = true
quinn.workspace = true
rustls.workspace = true
rcgen.workspace = true

# Serialization
serde.workspace = true
bincode.workspace = true

# Primitives
alloy-primitives.workspace = true

# Async
tokio.workspace = true
futures = "0.3"

# Error handling
eyre.workspace = true
thiserror.workspace = true

# Hashing
sha2.workspace = true

# Encoding
hex.workspace = true

# Logging
tracing.workspace = true
