[package]
name = "n42-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "N42 node type definition and component assembly"

[dependencies]
n42-primitives.workspace = true
n42-chainspec.workspace = true
n42-consensus.workspace = true
n42-execution.workspace = true
n42-network.workspace = true

reth-chainspec.workspace = true
reth-consensus.workspace = true
reth-ethereum-consensus.workspace = true
reth-ethereum-engine-primitives.workspace = true
reth-ethereum-primitives.workspace = true
reth-evm.workspace = true
reth-evm-ethereum.workspace = true
reth-node-api.workspace = true
reth-node-builder.workspace = true
reth-node-ethereum.workspace = true
reth-node-types.workspace = true
reth-payload-builder.workspace = true
reth-transaction-pool.workspace = true
reth-primitives-traits.workspace = true
reth-provider.workspace = true
reth-network-api.workspace = true
reth-tasks.workspace = true
reth-tracing.workspace = true

alloy-primitives.workspace = true

eyre.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
libp2p.workspace = true
