[package]
name = "n42-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "N42 node type definition and component assembly"

[dependencies]
n42-primitives.workspace = true
n42-chainspec.workspace = true
n42-consensus.workspace = true
n42-execution.workspace = true
n42-mobile.workspace = true
n42-network.workspace = true

reth-chainspec.workspace = true
reth-consensus.workspace = true
reth-ethereum-consensus.workspace = true
reth-ethereum-engine-primitives.workspace = true
reth-ethereum-primitives.workspace = true
reth-evm.workspace = true
reth-evm-ethereum.workspace = true
reth-revm.workspace = true
reth-node-api.workspace = true
reth-node-builder.workspace = true
reth-node-ethereum.workspace = true
reth-node-types.workspace = true
reth-payload-builder.workspace = true
reth-transaction-pool.workspace = true
reth-primitives-traits.workspace = true
reth-provider.workspace = true
reth-network-api.workspace = true
reth-tasks.workspace = true
reth-tracing.workspace = true

alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-rpc-types-engine.workspace = true

reth-ethereum-payload-builder.workspace = true
reth-basic-payload-builder.workspace = true
reth-payload-builder-primitives.workspace = true
reth-payload-primitives.workspace = true
reth-engine-primitives.workspace = true
reth-chain-state.workspace = true
reth-storage-api.workspace = true
reth-trie-common.workspace = true
reth-rpc-builder.workspace = true

arc-swap.workspace = true
jsonrpsee.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true

async-trait = "0.1"
hex.workspace = true

bytes.workspace = true
zstd.workspace = true
eyre.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
metrics.workspace = true

[dev-dependencies]
libp2p.workspace = true
revm.workspace = true
reth-testing-utils.workspace = true
