[package]
name = "n42-parallel-evm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Block-STM parallel EVM execution engine for N42"

[dependencies]
# EVM
revm = { workspace = true, features = ["std"] }

# Primitives
alloy-primitives = { workspace = true }

# Concurrency
rayon = "1.10"
dashmap = "6.1"
parking_lot = "0.12"

# Logging & metrics
tracing = { workspace = true }
metrics = { workspace = true }

# Error handling
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
