[package]
name = "n42-primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "N42 primitive types: BLS signatures, quorum certificates, consensus messages"

[dependencies]
# Crypto
blst.workspace = true
bitvec.workspace = true

# Alloy
alloy-primitives.workspace = true

# Serialization
serde.workspace = true
bincode.workspace = true

# reth
reth-ethereum-primitives.workspace = true
reth-primitives-traits.workspace = true

# Error
thiserror.workspace = true

# Misc
derive_more.workspace = true
getrandom = "0.3"
