[package]
name = "n42-twig-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# Zero reth/mdbx dependencies: pure-blake3 QMDB-style twig engine (all-DRAM
# AlDBaran variant) + proof verification, so n42-mobile / FFI can verify twig
# proofs without pulling the storage stack. See docs/devlog-64.

[dependencies]
blake3.workspace = true
serde.workspace = true
thiserror.workspace = true
# Optional: cross-shard parallelism for the builder. OFF by default so mobile/FFI
# stays zero-dep (it only verifies proofs). n42-jmt enables it.
rayon = { workspace = true, optional = true }

[features]
default = []
rayon = ["dep:rayon"]

[dev-dependencies]
rand.workspace = true
bincode.workspace = true
serde_json = "1"
hex.workspace = true
memory-stats = "1"

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.15", features = ["prost-codec"] }

[[example]]
name = "profile_real"
