[package]
name = "n42-zkproof"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "ZK sidecar proof system for N42 block execution verification"

[dependencies]
alloy-primitives.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
tokio.workspace = true
tracing.workspace = true
metrics.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
